# nix.dance

./: .gitignore  CNAME  Main.hs  index.html  install.sh  installTemplate
.github/workflows/: integrate.yaml
dance-bundler/: dance-bundler.cabal  flake.nix
dance-bundler/app/: Main.hs
haskell/: index.html
rust/: index.html
templates/: export.json
templates/haskell/: flake.nix
templates/haskell/src/: Lib.hs
templates/root/: flake.nix  haskell-project.cabal
templates/rust/: .gitignore  Cargo.toml  flake.nix
templates/rust/rust-scaffold/cli/: main.rs
